# iti-lot-simulator

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: lint.yml
benches/: bench.rs
src/: cli.rs  continuous_simulator.rs  event_simulator.rs  faithful.rs  main.rs  parking_lot.rs  random_generator.rs  simulator.rs  triangular_distribution.rs
